cmake_minimum_required(VERSION 3.12)
project(CS3400_xv6)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(CS3400_xv6
        asm.h
        bio.c
        bootmain.c
        buf.h
        cat.c
        console.c
        date.h
        defs.h
        echo.c
        elf.h
        exec.c
        fcntl.h
        file.c
        file.h
        forktest.c
        fs.c
        fs.h
        grep.c
        ide.c
        init.c
        ioapic.c
        kalloc.c
        kbd.c
        kbd.h
        kill.c
        lapic.c
        ln.c
        log.c
        ls.c
        main.c
        Makefile
        memide.c
        memlayout.h
        mkdir.c
        mkfs.c
        mmu.h
        mp.c
        mp.h
        Notes
        param.h
        picirq.c
        pipe.c
        printf.c
        proc.c
        proc.h
        README
        rm.c
        sh.c
        sleeplock.c
        sleeplock.h
        spinlock.c
        spinlock.h
        stat.h
        stressfs.c
        string.c
        syscall.c
        syscall.h
        sysfile.c
        sysproc.c
        testcow.c
        trap.c
        traps.h
        TRICKS
        types.h
        uart.c
        ulib.c
        umalloc.c
        user.h
        usertests.c
        usys.S
        vm.c
        wc.c
        x86.h
        zombie.c nice.c rand.c rand.h delta_sched.c)
